--- a/Index.html
+++ b/Index.html
@@ -7,32 +7,7 @@
     
 </head>
 <body>
-  <div hidden><code>Hello World</code></div>
-  <ul id="ul" hidden>
-    <li id="one">1</li>
-    <li id="two">4</li>
-  </ul>
-  <table id="table">
-    <thead>
-      <tr>
-        <th>Name</th><th>Surname</th><th>Age</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td><td>Smith</td><td>10</td>
-      </tr>
-      <tr>
-        <td>Pete</td><td>Brown</td><td>15</td>
-      </tr>
-      <tr>
-        <td>Ann</td><td>Lee</td><td>5</td>
-      </tr>
-      <tr>
-        <td>...</td><td>...</td><td>...</td>
-      </tr>
-    </tbody>
-    </table>
-  <script src="Tasks/dom/dom6.js"></script>
+  <div ><code>Hello World</code></div>
+  <script src="Tasks/intro to events/events.js"></script>
 </body>
 </html>
