--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    .strong {
+      font-weight: bold;
+    }
+    img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  </style>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="Tasks/forms, controls/TD.css">
+  <link rel="stylesheet" type="text/css" href="Tasks/mentoring/log form.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS tasks</title>
     
 </head>
 <body>
   <div ><code>Hello World</code></div>
-  <script src="Tasks/intro to events/events.js"></script>
+  <script src="Tasks/mentoring/log form.js""></script>
 </body>
 </html>
