--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-    .strong {
-      font-weight: bold;
-    }
-    img {
-      max-height: 100%;
-      max-width: 100%;
-    }
-  </style>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="Tasks/forms, controls/TD.css">
-  <link rel="stylesheet" type="text/css" href="Tasks/mentoring/log form.css">
+  <link rel="stylesheet" type="text/css" href="Tasks/mentoring/vanilla log form/log form.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@500&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
@@ -23,6 +14,6 @@
 </head>
 <body>
   <div ><code>Hello World</code></div>
-  <script src="Tasks/mentoring/log form.js""></script>
+  <script src="Tasks/mentoring/vanilla log form/log form.js""></script>
 </body>
 </html>
